--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
+    "@tanstack/react-query": "^5.90.5",
     "next": "15.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
